# pythonic-stuff

./: .gitignore  bazarr_syncer.py  bazarr_translater.py  ffsubsync_syncer.py  mkv_finder_replacer.py
archifska/: README.md  benchmark_archifska.py  ideas.md  main.py  pyproject.toml  utils.py
archifska/utils/: ErrorCodes.py  NarchifskaClient.py  NarchifskaErrors.py  StarrUpdater.py  archiskaClient.py  error_codes.py  filesystem_service.py  loggingSetup.py  logging_setup.py  media_extensions.py  narchifska_client.py  narchifska_errors.py  qbittorrent_service.py  read_env.py  starrUpdater.py  starr_updater.py  tests.py
media_management/: bazarr_syncer.py  bazarr_translater.py  benchmark_dirdemon.py  dirdemon.py  main.py  mkv_finder_replacer.py
pause_the_rainbow/: README.md  main.py  pyproject.toml
pause_the_rainbow/utils/: rainbow_pause.py  read_env.py  webhook_watcher.py
qol/: jsonl_humanifier.py  pasted_image_mover.py
tartu/kaltsuvaip/: main.py
tartu/kaugushupe/: main.py
tartu/korvpall/: main.py  punktid.txt
tartu/maadlejad/: main.py
tartu/puhh/: saja_aakri_mets.py
tartu/puhh_vol2/: main.py
tartu/raamatud/: main.py
tartu/tont/: tont.py
tartu/turniir/: turniir.py  turniir_uus.txt
