[project]
name = "pause-the-rainbow"
version = "0.1.0"
description = "get webhook from jellyfin on playback activity, then pause RainbowMiner until playback stops"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "webhook-listener>=1.2.0",
]
